[metadata]
name = geotiler
version = 0.14.7
author = Artur Wroblewski
author_email = wrobell@riseup.net
description = GeoTiler - library to create maps using tiles from a map provider
long_description = file: README
long_description_content_type = text/x-rst
url = https://wrobell.dcmod.org/geotiler/
project_urls =
    Code = https://github.com/wrobell/geotiler
    Bug tracker = https://github.com/wrobell/geotiler/issues
classifiers =
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta

license = GPL (includes BSD licensed code)

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True
scripts =
    bin/geotiler-lint
    bin/geotiler-route
    bin/geotiler-fetch
install_requires = 
    Pillow
    cytoolz >= 0.8.2
    aiohttp >= 2.3.5
    setuptools

[options.extras_require]
tests = mypy; pytest-cov; pytest-timeout; pytest-asyncio; numpy

[tool:pytest]
addopts=--cov geotiler --cov-report=term-missing

[tool:coverage:report]
show_missing=1
partial_branches=1

